# TMotorAPI

./: README-KR.md  README.md  pyproject.toml
demo/: position_control.py  trajectory_control.py  velocity_control.py
demos/: TEMPLATE.ipynb  TEMPLATE_VER2.ipynb  Template.jpynb  demo_get_state.py  demo_torque_control.py  demo_velocity_control.py
src/: TMotorAPI.py  __init__.py
