[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TMotorAPI"
version = "0.1.2"
description = "High-level TMotor control API for TMotorCANControl with CubeMars T-Motor"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "python-can[gs_usb]>=4.6",
  "gs_usb>=0.3",
  "pyusb>=1.2",
  "libusb-package>=1.0",   # Windows용 libusb-1.0 네이티브 바이너리 번들
  "TMotorCANControl @ git+https://github.com/KR70004526/TMotorCANControl.git@windows-gs-usb"
]
authors = [{name = "KR70004526"}]

# TMotorAPI 는 src/TMotorAPI.py 단일 flat 모듈. packages.find 로는 안 잡혀
# 정규/github(pip install git+...) 설치 시 빈 wheel 이 됐음 → py-modules 로 명시.
[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["TMotorAPI"]
